[gd_scene load_steps=4 format=3 uid="uid://soum1c8oyrso"]

[ext_resource type="Script" path="res://addons/rivet/devtools/dock/deploy_tab.gd" id="1_7k6ip"]
[ext_resource type="PackedScene" uid="uid://bogw8dj8rr202" path="res://addons/rivet/devtools/dock/elements/namespace_menu_button.tscn" id="2_5hxk2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dfadg"]

[node name="Deploy" type="MarginContainer"]
offset_right = 734.0
offset_bottom = 109.0
script = ExtResource("1_7k6ip")

[node name="Deployment Fields" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Deployment Label" type="RichTextLabel" parent="Deployment Fields"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_dfadg")
bbcode_enabled = true
text = "[b]Build & Deploy Server[/b]"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="DeployNamespaceSelector" parent="Deployment Fields" instance=ExtResource("2_5hxk2")]
layout_mode = 2
current_value = {
"create_ts": "1970-01-01T00:00:00Z",
"display_name": "Production",
"name_id": "prod",
"namespace_id": "00000000-0000-0000-0000-000000000000",
"version": {
"create_ts": "1970-01-01T00:00:00Z",
"display_name": "0.0.1",
"version_id": "00000000-0000-0000-0000-000000000000"
},
"version_id": "00000000-0000-0000-0000-000000000000"
}

[node name="Actions" type="HBoxContainer" parent="Deployment Fields"]
layout_mode = 2

[node name="BuildDeployButton" type="Button" parent="Deployment Fields/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Build & Deploy"

[node name="ManageVersionButton" type="Button" parent="Deployment Fields/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Manage Versions"

[node name="Links" type="HBoxContainer" parent="Deployment Fields"]
layout_mode = 2

[node name="LogsButton" type="Button" parent="Deployment Fields/Links"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Logs"

[node name="LobbiesButton" type="Button" parent="Deployment Fields/Links"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Lobbies"
